--- a/Yordanov_M_FinalProjectCS23/Yordanov_M_FinalProjectCS23.csproj
+++ b/Yordanov_M_FinalProjectCS23/Yordanov_M_FinalProjectCS23.csproj
@@ -173,6 +173,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="bubbles.png" />
     <Content Include="ProjectFinalDatabase.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
